# webserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  TESTS copy.md  TESTS.md  temp_fix.txt  test_autoindex.cpp  test_cgi.conf  test_determineFilePath  test_error.conf  test_handlers.sh  test_handlers_improved.sh  test_individual_handlers.sh  test_nginx_style_determineFilePath.cpp  test_pages.sh  test_template.cpp
configs/: default.conf  default_laurens.conf  default_vallu.conf  four.conf  ilia_2.conf  ilia_standart.conf  ilia_two.conf  iliastd.conf  testAllHandlers.conf  testDeleteHandler.conf  testGetHandler.conf  testPostHandler.conf  testRedirectHandler.conf  test_autoindex.conf  testing.conf  three.conf  two.conf
configs/evaluation/: default.conf  extended.conf  repeating_IP+port.conf
configs/ilia/: 3_sites.conf  default.conf  default2.conf  default3.conf  default_full_path.conf  empty.conf  full_path.conf  ilia_two.conf  nested.conf  nginx_default.conf  samesame.conf  testAllHandlers.conf  testCgiHandler.conf  testDeleteHandler.conf  testGetHandler.conf  testPostHandler.conf  testRedirectHandler.conf  test_minimal.conf
configs/more_example_configs/: 3_sites.conf  default.conf  default_relative_path.conf  empty.conf  full_path.conf  nested.conf  samesame.conf
inc/: AMessage.hpp  Request.hpp  Response.hpp  Router.hpp  webserv.hpp
src/: .main.cpp.swp  main.cpp
src/config/: Config.cpp  Config.hpp  ConfigExtractor.cpp  ConfigExtractor.hpp  ConfigValidator.cpp  ConfigValidator.hpp
src/message/: AMessage.cpp  AMessage.hpp
src/parser/: Parser.cpp  Parser.hpp  ParserUtils.cpp
src/request/: CreateRequest.cpp  Request.cpp  Request.hpp
src/response/: Response.cpp  Response.hpp
src/response/tests/: 408_timeout.py  Makefile  response.py  t_res_.cpp  test_response.cpp
src/router/: HttpConstants.hpp  ROUTER.md  Request.cpp  Request.hpp  RequestProcessor.cpp  RequestProcessor.hpp  Router.cpp  Router.hpp
src/router/handlers/: CgiExecutor.cpp  CgiExecutor.hpp  HandlerUtils.cpp  HandlerUtils.hpp  Handlers.cpp  Handlers.hpp  MultipartParser.cpp  MultipartParser.hpp
src/router/tests/: Makefile  test.cpp  test_addRoute  test_addRoute.cpp  test_delete  test_delete.cpp  test_get  test_get.cpp  test_router  test_router_get.cpp  test_upload  test_upload.cpp  utils.cpp
src/router/utils/: CgiUtilc.cpp  CgiUtilc.hpp  CgiUtils.cpp  CgiUtils.hpp  ErrorResponseBuilder.cpp  ErrorResponseBuilder.hpp  (+10 more)
src/server/: Cluster.cpp  Cluster.hpp  HelperFunctions.cpp  HelperFunctions.hpp  Server.cpp  Server.hpp  devHelpers.cpp  devHelpers.hpp
test/: chunked-request.py  decodeChunkedBody.cpp  requestComplete.cpp  siege_text.txt
test/end-to-end/: POLLERR.py  chunked-request.py  chunked-request1.5.py  chunked-request2.py  client-timeout-response.py  invalid-chunked-request-too-long.py  invalid-request-body-too-long.py  multiple-clients-requests.py  multiple-clients.py  run_all_tests.sh  valid-request-2.5.py  valid-request-2.py  valid-request.py
test/ilia/: TESTS.md  comprehensive_tests.sh  run_all_tests.sh  run_tests.sh
test/not_working_anymore/: parser_tests.cpp  request_parsing_test.cpp
test/stress-tests/: chunked-request.py  client-timeout-response.py  multiple-clients.py  valid-request-2.5.py  valid-request-2.py  valid-request.py
test/unit/: config_validation_tests.cpp  request_parsing_test.cpp  request_validation_tests.cpp
www/: README_FIRST.txt  admin_dashboard.html  api_landing.html  api_response.html  delete.html  favicon.ico:Zone.Identifier  index.html  play_video.html  show_img.html  upload.html  upload_error.html  upload_success.html
www/api/: test.json
www/cgi-bin/: hello.ts  inf2.py  infinite_loop.py
www/default/: default.html
www/empty/: dummy.html
www/errors/: bad_request_400.html  error-styles.css  gateway_timeout_504.html  internal_server_error_500.html  method_not_allowed_405.html  not_found_404.html  payload_too_large_413.html  request_timeout_408.html
www/site2/: index.html
www/site3/: index.html
www/test/: dummy2.html  test_file1.json  test_file2.txt
www/testdir/: index.html
www/uploads/: postdata.txt  test_file.txt  test_upload.txt  upload_test.txt
www/webserv_project/: autoindex_fallback.html  delete.html  test_upload.html  upload.html
(+62 files in other folders)
